[tool.poetry]
name = "aapssistant"
version = "0.1.0"
description = ""
authors = ["Ricardo Carrillo Cruz <ricarril@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyautogen = "^0.2.14"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
